add code for SYAM-KUMAR-_DATA-VISTA-DATA-ANALYSIS-AND-VISUALISATION-_Infosys_Internship_Oct2024

--- a/Zomato_Data_Set_Analysis_&_Visualization.ipynb
+++ b/Zomato_Data_Set_Analysis_&_Visualization.ipynb
@@ -1,16 +1,6 @@
 {
   "cells": [
     {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/Nsyam-123/SYAM-KUMAR-_DATA-VISTA-DATA-ANALYSIS-AND-VISUALISATION-_Infosys_Internship_Oct2024/blob/main/Zomato_Data_Set_Analysis_%26_Visualization.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
-    {
       "cell_type": "code",
       "execution_count": 1,
       "metadata": {
@@ -9085,8 +9075,7 @@
   ],
   "metadata": {
     "colab": {
-      "provenance": [],
-      "include_colab_link": true
+      "provenance": []
     },
     "kernelspec": {
       "display_name": "Python 3",
